Add an endpoint to create a 1-player game
The /match/pair endpoint allows for creation of a match for both players in a new game simultaneously.

This will permit 1-player games to be reliably created.
